# scrapy-beautifulsoup

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
beautifulsoup/: authors.py  authors_soup.json  authors_soup.py  quotes.py  quotes_soup.json  quotes_soup.py
mongodb/: connect.py  models.py  tools_file_and_mongodb.py
scrapy_spyder/: scrapy.cfg
scrapy_spyder/scrapy_spyder/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_spyder/scrapy_spyder/spiders/: authors.json  authors_spyder.py  quotes.json  quotes_spider.py  quotes_spyder.py
