[tool.poetry]
name = "scrapy-beautifulsoup"
version = "0.1.0"
description = ""
authors = ["sebastianLedzianowski <136706736+sebastianLedzianowski@users.noreply.github.com>"]
license = "MIT (Massachusetts Institute of Technology)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
