[tool.poetry]
name = "scrapy-beautifulsoup"
version = "0.1.0"
description = ""
authors = ["sebastianLedzianowski <136706736+sebastianLedzianowski@users.noreply.github.com>"]
license = "MIT (Massachusetts Institute of Technology)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
beautifulsoup4 = "^4.12.2"
lxml = "^5.1.0"
requests = "^2.31.0"
mongoengine = "^0.27.0"
python-dotenv = "^1.0.0"
logging = "^0.4.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
